packages/delta_ffi/headers/deltachat.h

typedef struct dc_context dc_context_t;
typedef struct dc_event dc_event_t;
typedef struct dc_event_emitter dc_event_emitter_t;
typedef struct dc_array dc_array_t;
typedef struct dc_chatlist dc_chatlist_t;
int32_t dc_set_config(dc_context_t* ctx, const char* key, const char* value);
void dc_start_io(dc_context_t* ctx);
void dc_stop_io(dc_context_t* ctx);
void dc_maybe_network(dc_context_t* ctx);
int32_t dc_get_connectivity(dc_context_t* ctx);
char* dc_get_last_error(dc_context_t* ctx);
dc_chatlist_t* dc_get_chatlist(dc_context_t* ctx, int flags, const char* query_str, uint32_t query_id);
void dc_chatlist_unref(dc_chatlist_t* chatlist);
size_t dc_chatlist_get_cnt(const dc_chatlist_t* chatlist);
uint32_t dc_chatlist_get_chat_id(const dc_chatlist_t* chatlist, size_t index);
uint32_t dc_chatlist_get_msg_id(const dc_chatlist_t* chatlist, size_t index);
dc_array_t* dc_get_chat_msgs(dc_context_t* ctx, uint32_t chat_id, uint32_t flags, uint32_t marker1before);
int dc_get_msg_cnt(dc_context_t* ctx, uint32_t chat_id);
dc_event_emitter_t* dc_get_event_emitter(dc_context_t* ctx);
void dc_event_emitter_unref(dc_event_emitter_t* emitter);
dc_event_t* dc_get_next_event(dc_event_emitter_t* emitter);
void dc_event_unref(dc_event_t* event);
int32_t dc_event_get_id(dc_event_t* event);
int32_t dc_event_get_data1_int(dc_event_t* event);
int32_t dc_event_get_data2_int(dc_event_t* event);
char* dc_event_get_data1_str(dc_event_t* event);
char* dc_event_get_data2_str(dc_event_t* event);
uint32_t dc_event_get_account_id(dc_event_t* event);
void dc_str_unref(char* value);
void dc_array_unref(dc_array_t* array);
int32_t dc_array_get_cnt(const dc_array_t* array);
uint32_t dc_array_get_id(const dc_array_t* array, int32_t index);