packages/delta_ffi/lib/src/bindings.dart


  int dc_set_config(
    ffi.Pointer<dc_context_t> ctx,
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Char> value,
  ) {
    return _dc_set_config(
      ctx,
      key,
      value,
    );
  }

  late final _dc_set_configPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<dc_context_t>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('dc_set_config');
  late final _dc_set_config = _dc_set_configPtr.asFunction<
      int Function(ffi.Pointer<dc_context_t>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  void dc_start_io(
    ffi.Pointer<dc_context_t> ctx,
  ) {
    return _dc_start_io(
      ctx,
    );
  }

  late final _dc_start_ioPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<dc_context_t>)>>(
          'dc_start_io');
  late final _dc_start_io =
      _dc_start_ioPtr.asFunction<void Function(ffi.Pointer<dc_context_t>)>();

  void dc_stop_io(
    ffi.Pointer<dc_context_t> ctx,
  ) {
    return _dc_stop_io(
      ctx,
    );
  }

  late final _dc_stop_ioPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<dc_context_t>)>>(
          'dc_stop_io');
  late final _dc_stop_io =
      _dc_stop_ioPtr.asFunction<void Function(ffi.Pointer<dc_context_t>)>();

  void dc_maybe_network(
    ffi.Pointer<dc_context_t> ctx,
  ) {
    return _dc_maybe_network(
      ctx,
    );
  }

  late final _dc_maybe_networkPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<dc_context_t>)>>(
          'dc_maybe_network');
  late final _dc_maybe_network = _dc_maybe_networkPtr
      .asFunction<void Function(ffi.Pointer<dc_context_t>)>();

  int dc_get_connectivity(
    ffi.Pointer<dc_context_t> ctx,
  ) {
    return _dc_get_connectivity(
      ctx,
    );
  }

  late final _dc_get_connectivityPtr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<dc_context_t>)>>(
      'dc_get_connectivity');
  late final _dc_get_connectivity = _dc_get_connectivityPtr
      .asFunction<int Function(ffi.Pointer<dc_context_t>)>();

  ffi.Pointer<ffi.Char> dc_get_last_error(
    ffi.Pointer<dc_context_t> ctx,
  ) {
    return _dc_get_last_error(
      ctx,
    );
  }

  late final _dc_get_last_errorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<dc_context_t>)>>('dc_get_last_error');
  late final _dc_get_last_error = _dc_get_last_errorPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<dc_context_t>)>();

  ffi.Pointer<dc_chatlist_t> dc_get_chatlist(
    ffi.Pointer<dc_context_t> ctx,
    int flags,
    ffi.Pointer<ffi.Char> query_str,
    int query_id,
  ) {
    return _dc_get_chatlist(
      ctx,
      flags,
      query_str,
      query_id,
    );
  }

  late final _dc_get_chatlistPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<dc_chatlist_t> Function(ffi.Pointer<dc_context_t>,
              ffi.Int, ffi.Pointer<ffi.Char>, ffi.Uint32)>>('dc_get_chatlist');
  late final _dc_get_chatlist = _dc_get_chatlistPtr.asFunction<
      ffi.Pointer<dc_chatlist_t> Function(
          ffi.Pointer<dc_context_t>, int, ffi.Pointer<ffi.Char>, int)>();

  void dc_chatlist_unref(
    ffi.Pointer<dc_chatlist_t> chatlist,
  ) {
    return _dc_chatlist_unref(
      chatlist,
    );
  }

  late final _dc_chatlist_unrefPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<dc_chatlist_t>)>>(
      'dc_chatlist_unref');
  late final _dc_chatlist_unref = _dc_chatlist_unrefPtr
      .asFunction<void Function(ffi.Pointer<dc_chatlist_t>)>();

  int dc_chatlist_get_cnt(
    ffi.Pointer<dc_chatlist_t> chatlist,
  ) {
    return _dc_chatlist_get_cnt(
      chatlist,
    );
  }

  late final _dc_chatlist_get_cntPtr = _lookup<
          ffi.NativeFunction<ffi.Size Function(ffi.Pointer<dc_chatlist_t>)>>(
      'dc_chatlist_get_cnt');
  late final _dc_chatlist_get_cnt = _dc_chatlist_get_cntPtr
      .asFunction<int Function(ffi.Pointer<dc_chatlist_t>)>();

  int dc_chatlist_get_chat_id(
    ffi.Pointer<dc_chatlist_t> chatlist,
    int index,
  ) {
    return _dc_chatlist_get_chat_id(
      chatlist,
      index,
    );
  }

  late final _dc_chatlist_get_chat_idPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint32 Function(ffi.Pointer<dc_chatlist_t>,
              ffi.Size)>>('dc_chatlist_get_chat_id');
  late final _dc_chatlist_get_chat_id = _dc_chatlist_get_chat_idPtr
      .asFunction<int Function(ffi.Pointer<dc_chatlist_t>, int)>();

  int dc_chatlist_get_msg_id(
    ffi.Pointer<dc_chatlist_t> chatlist,
    int index,
  ) {
    return _dc_chatlist_get_msg_id(
      chatlist,
      index,
    );
  }

  late final _dc_chatlist_get_msg_idPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint32 Function(
              ffi.Pointer<dc_chatlist_t>, ffi.Size)>>('dc_chatlist_get_msg_id');
  late final _dc_chatlist_get_msg_id = _dc_chatlist_get_msg_idPtr
      .asFunction<int Function(ffi.Pointer<dc_chatlist_t>, int)>();

  ffi.Pointer<dc_array_t> dc_get_chat_msgs(
    ffi.Pointer<dc_context_t> ctx,
    int chat_id,
    int flags,
    int marker1before,
  ) {
    return _dc_get_chat_msgs(
      ctx,
      chat_id,
      flags,
      marker1before,
    );
  }

  late final _dc_get_chat_msgsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<dc_array_t> Function(ffi.Pointer<dc_context_t>,
              ffi.Uint32, ffi.Uint32, ffi.Uint32)>>('dc_get_chat_msgs');
  late final _dc_get_chat_msgs = _dc_get_chat_msgsPtr.asFunction<
      ffi.Pointer<dc_array_t> Function(
          ffi.Pointer<dc_context_t>, int, int, int)>();

  int dc_get_msg_cnt(
    ffi.Pointer<dc_context_t> ctx,
    int chat_id,
  ) {
    return _dc_get_msg_cnt(
      ctx,
      chat_id,
    );
  }

  late final _dc_get_msg_cntPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<dc_context_t>, ffi.Uint32)>>('dc_get_msg_cnt');
  late final _dc_get_msg_cnt = _dc_get_msg_cntPtr
      .asFunction<int Function(ffi.Pointer<dc_context_t>, int)>();

  ffi.Pointer<dc_event_emitter_t> dc_get_event_emitter(
    ffi.Pointer<dc_context_t> ctx,
  ) {
    return _dc_get_event_emitter(
      ctx,
    );
  }

  late final _dc_get_event_emitterPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<dc_event_emitter_t> Function(
              ffi.Pointer<dc_context_t>)>>('dc_get_event_emitter');
  late final _dc_get_event_emitter = _dc_get_event_emitterPtr.asFunction<
      ffi.Pointer<dc_event_emitter_t> Function(ffi.Pointer<dc_context_t>)>();

  void dc_event_emitter_unref(
    ffi.Pointer<dc_event_emitter_t> emitter,
  ) {
    return _dc_event_emitter_unref(
      emitter,
    );
  }

  late final _dc_event_emitter_unrefPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<dc_event_emitter_t>)>>(
      'dc_event_emitter_unref');
  late final _dc_event_emitter_unref = _dc_event_emitter_unrefPtr
      .asFunction<void Function(ffi.Pointer<dc_event_emitter_t>)>();

  ffi.Pointer<dc_event_t> dc_get_next_event(
    ffi.Pointer<dc_event_emitter_t> emitter,
  ) {
    return _dc_get_next_event(
      emitter,
    );
  }

  late final _dc_get_next_eventPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<dc_event_t> Function(
              ffi.Pointer<dc_event_emitter_t>)>>('dc_get_next_event');
  late final _dc_get_next_event = _dc_get_next_eventPtr.asFunction<
      ffi.Pointer<dc_event_t> Function(ffi.Pointer<dc_event_emitter_t>)>();

  void dc_event_unref(
    ffi.Pointer<dc_event_t> event,
  ) {
    return _dc_event_unref(
      event,
    );
  }

  late final _dc_event_unrefPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<dc_event_t>)>>(
          'dc_event_unref');
  late final _dc_event_unref =
      _dc_event_unrefPtr.asFunction<void Function(ffi.Pointer<dc_event_t>)>();

  int dc_event_get_id(
    ffi.Pointer<dc_event_t> event,
  ) {
    return _dc_event_get_id(
      event,
    );
  }

  late final _dc_event_get_idPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<dc_event_t>)>>(
          'dc_event_get_id');
  late final _dc_event_get_id =
      _dc_event_get_idPtr.asFunction<int Function(ffi.Pointer<dc_event_t>)>();

  int dc_event_get_data1_int(
    ffi.Pointer<dc_event_t> event,
  ) {
    return _dc_event_get_data1_int(
      event,
    );
  }

  late final _dc_event_get_data1_intPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<dc_event_t>)>>(
          'dc_event_get_data1_int');
  late final _dc_event_get_data1_int = _dc_event_get_data1_intPtr
      .asFunction<int Function(ffi.Pointer<dc_event_t>)>();

  int dc_event_get_data2_int(
    ffi.Pointer<dc_event_t> event,
  ) {
    return _dc_event_get_data2_int(
      event,
    );
  }

  late final _dc_event_get_data2_intPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<dc_event_t>)>>(
          'dc_event_get_data2_int');
  late final _dc_event_get_data2_int = _dc_event_get_data2_intPtr
      .asFunction<int Function(ffi.Pointer<dc_event_t>)>();

  ffi.Pointer<ffi.Char> dc_event_get_data1_str(
    ffi.Pointer<dc_event_t> event,
  ) {
    return _dc_event_get_data1_str(
      event,
    );
  }

  late final _dc_event_get_data1_strPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<dc_event_t>)>>('dc_event_get_data1_str');
  late final _dc_event_get_data1_str = _dc_event_get_data1_strPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<dc_event_t>)>();

  ffi.Pointer<ffi.Char> dc_event_get_data2_str(
    ffi.Pointer<dc_event_t> event,
  ) {
    return _dc_event_get_data2_str(
      event,
    );
  }

  late final _dc_event_get_data2_strPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<dc_event_t>)>>('dc_event_get_data2_str');
  late final _dc_event_get_data2_str = _dc_event_get_data2_strPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<dc_event_t>)>();

  int dc_event_get_account_id(
    ffi.Pointer<dc_event_t> event,
  ) {
    return _dc_event_get_account_id(
      event,
    );
  }

  late final _dc_event_get_account_idPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(ffi.Pointer<dc_event_t>)>>(
          'dc_event_get_account_id');
  late final _dc_event_get_account_id = _dc_event_get_account_idPtr
      .asFunction<int Function(ffi.Pointer<dc_event_t>)>();

  void dc_str_unref(
    ffi.Pointer<ffi.Char> value,
  ) {
    return _dc_str_unref(
      value,
    );
  }

  late final _dc_str_unrefPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'dc_str_unref');
  late final _dc_str_unref =
      _dc_str_unrefPtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void dc_array_unref(
    ffi.Pointer<dc_array_t> array,
  ) {
    return _dc_array_unref(
      array,
    );
  }

  late final _dc_array_unrefPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<dc_array_t>)>>(
          'dc_array_unref');
  late final _dc_array_unref =
      _dc_array_unrefPtr.asFunction<void Function(ffi.Pointer<dc_array_t>)>();

  int dc_array_get_cnt(
    ffi.Pointer<dc_array_t> array,
  ) {
    return _dc_array_get_cnt(
      array,
    );
  }

  late final _dc_array_get_cntPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<dc_array_t>)>>(
          'dc_array_get_cnt');
  late final _dc_array_get_cnt =
      _dc_array_get_cntPtr.asFunction<int Function(ffi.Pointer<dc_array_t>)>();

  int dc_array_get_id(
    ffi.Pointer<dc_array_t> array,
    int index,
  ) {
    return _dc_array_get_id(
      array,
      index,
    );
  }

  late final _dc_array_get_idPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint32 Function(
              ffi.Pointer<dc_array_t>, ffi.Int32)>>('dc_array_get_id');
  late final _dc_array_get_id = _dc_array_get_idPtr
      .asFunction<int Function(ffi.Pointer<dc_array_t>, int)>();
